# CppBoilerplate

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat  main.cpp  pybind11.cpp  vcpkg_windows.bat
